--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-dynamodb": "^3.575.0",
     "@aws-sdk/client-s3": "^3.574.0",
     "@aws-sdk/lib-storage": "^3.575.0",
+    "@aws-sdk/s3-request-presigner": "^3.576.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
