--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/s3-request-presigner": "^3.576.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.4",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
